Improve webserver code

--- a/esp32/netmcu/components/http_server_content/webapp/tfmcu_dev.html
+++ b/esp32/netmcu/components/http_server_content/webapp/tfmcu_dev.html
@@ -153,12 +153,12 @@
   </head>
   <body>
 
-    <div class="tab">
-      <button class="tablinks" id="atb">RV-MCU</button>
-      <button class="tablinks" id="ctb">Network-MCU</button>
-      <button class="tablinks" id="stb">Firmware-Update</button>
-    </div>
-
+    <!-- Tab links -->
+<!--  ------------------------------------------------------------------------------ -->
+    <div id="tabBar" class="tab"></div>
+<!--  ------------------------------------------------------------------------------ -->
+    <div  class="container tabcontent">
+<!--  ------------------------------------------------------------------------------ -->
 
     <div id="id-rvDiv">
       <div id="id-timer-table-div">
