--- a/esp32/netmcu/components/http_server_content/webapp/tfmcu_dev.html
+++ b/esp32/netmcu/components/http_server_content/webapp/tfmcu_dev.html
@@ -212,6 +212,7 @@
           <li>MCU type: <span id="id_chip"></span></li>
           <li>firmware version: <span id="id_firmware"></span></li>
           <li>firmware build date: <span id="id_buildTime"></span></li>
+          <li><label>boot count: <span id="id-bootCount"></span></label></li>
         </ul>
    </div>
 
@@ -230,9 +231,6 @@
       <br><br>
       <button id="mrtb" type="button">Restart MCU</button><br>
       <div id="config_restart_div"></div>
-      <ul>
-	<li><label>NetMCU-Boot-Count: <span id="id-bootCount"></span></label></li>
-      </ul>
     </div>
   </body>
 </html>
