Improve building webapp by cmake

--- a/esp32/netmcu/components/webapp/wapp_dev.html
+++ b/esp32/netmcu/components/webapp/wapp_dev.html
@@ -8,6 +8,5 @@
 <title>RV</title>
 <script>document.addEventListener("DOMContentLoaded", wapp);</script>
 </head>
-<body>
-</body>
+<body></body>
 </html>
