--- a/esp32/netmcu/components/webapp/njs/src/styles/app.scss
+++ b/esp32/netmcu/components/webapp/njs/src/styles/app.scss
@@ -46,15 +46,15 @@ $color_bg_nav1: hsl(60, 65%, 78%);
 
 .main-area {
   border-radius: .75rem;
-  margin-top: 1rem;
-  padding: 0.5rem;
+  margin-top: .5rem;
+  padding: 0.25rem;
   background-color: $color_bg_main_area;
   border: thin solid $color_border;
 }
 
 .area {
   border-radius: .75rem;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   padding: 0.5rem;
   background-color: $color_bg_area;
   border: thin solid $color_border;
