--- a/esp32/netmcu/components/webapp/njs/src/styles/app.scss
+++ b/esp32/netmcu/components/webapp/njs/src/styles/app.scss
@@ -161,19 +161,33 @@ h3 {
 }
 
 
+
+
 select,
 button,
-input {
+input,
+.file_input {
   background-color: $color_bg;
   border: thin solid darken($color_bg_area, 5%);
   ;
 }
 
-button {
+button, .file_input {
   background-color: lighten($color_bg_area, 10%);
   padding: .5rem;
   margin: .5rem;
 }
+
+button:active {
+  background-color: $color_bg_select;
+  color: $color_fg_select;
+}
+
+button:active {
+  background-color: darken($color_bg, 25%);
+  color: lighten($color_fg, 25%);
+}
+
 
 input {
   background-color: white;
